@@ -1,4 +1,6 @@
+
 * enhancements
+  * The 'jqgrid' method is renamed and rewritten to fully support calls to jqgrid apis.
   * Get the page number for the json response from the will_paginate resultset.
 
 * bug fixes
